--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_USER=root
       - DB_SERVER=database
       - SERVER_PORT=80
     ports:
