--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<mapstruct.version>1.5.3.Final</mapstruct.version>
 		<postgresql.version>42.6.0</postgresql.version>
 		<flyway.version>9.8.1</flyway.version>
+		<springdoc.version>2.2.0</springdoc.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -38,6 +39,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
